# DataEngineeringHomework

./: .gitignore  README.md  data_loader.py  datasets.txt  environment.yml  pyproject.toml  requirements.txt  updated_dataset.parquet
etl/: README.md  __init__.py  extract.py  load.py  main.py  transform.py  validate.py
experiments/: README(1HW).md  data_loader.py
experiments/api_example/: README.MD  api_example.py
experiments/parse_example/: README.MD  data_parser2.py
my_project/: README.md  data_loader.py  pyproject.toml
my_project/notebooks/: EDA.ipynb  README.md
my_project/src/my_project/: data_loader.py
write_to_db_example/: README.md  write_to_db.py
