[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "ETL and EDA pipeline for Kaggle dataset"
authors = ["selivanek <isabriella@gmail.com>"]
readme = "README.md"
packages = [{include = "my_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.2"
numpy = "^2.3.3"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
requests = "^2.32.5"
beautifulsoup4 = "^4.13.5"
wget = "^3.2"
jupyterlab = "^4.4.7"
