[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "selivanek",email = "isabriella@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.7,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "wget (>=3.2,<4.0)",
    'sqlalchemy>=2.0.0',
    'pyarrow>=15.0.0',
    'psycopg2-binary>=2.9.0'
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
